--- a/src/components/Main/main-style.css
+++ b/src/components/Main/main-style.css
@@ -35,14 +35,15 @@ body {
 
 .main-wrapper {
   display: grid;
-  grid-template-rows: fit-content(10%) fit-content(90%);
+  grid-template-rows: fit-content(10%) auto;
   flex-grow: 1;
+  height: 95vh;
 }
 
 .panels-wrapper {
   display: grid;
   grid-template-columns: 50% 50%;
-  flex-grow: 1;
+  height: 100%;
 }
 
 .c-input {
